tests/invalid/ArrayGenerator_Invalid_2.whiley
function f(int n) -> int[]:
    return [0; n]
